# ps_manager

./: .gitignore  Cargo.toml  README.md  docker-compose.yml
config/: default.toml
ps_macro/: Cargo.toml
ps_macro/src/: lib.rs
ps_manager/: Cargo.toml
ps_manager/src/: lib.rs  main.rs  settings.rs
ps_manager/src/data/: customers.rs  mod.rs  order_details.rs  order_invoices.rs  orders.rs
ps_manager/src/data/ps/: mod.rs  order_invoice.rs
ps_manager/src/data_fetcher/: api_client.rs  mod.rs
src/: lib.rs  main.rs  settings.rs
src/config/: development.toml
src/data/: invoice.rs  mod.rs  order.rs
