[package]
name = "ps-invoice-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.13.3"
log = "0.4.20"
serde = "1.0.188"
serde_derive = "1.0.188"

[dependencies.simple_logger]
version = "4.2.0"
features = ["threads", "nightly"]
