[package]
name = "ps-invoice-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config               = { version = "0.13.4" }
console              = { version = "0.15.7" }
env_logger           = { version = "0.11.1" }
indicatif            = { version = "0.17.7" }
indicatif-log-bridge = { version = "0.2.2" }
log                  = { version = "0.4.20" , features = ["max_level_trace"]}
printpdf             = { version = "0.7.0" }
serde                = { version = "1.0.196" }
serde_derive         = { version = "1.0.196" }
tokio                = { version = "1.35.1", features = ["full"]}
url                  = { version = "2.5.0" }